--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Davie JR's Menu</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,500,700|Oswald:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/Projects/CC-Davie's-Burgers/sources/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="/Projects/CC-Davie's-Burgers/sources/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/sources/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="/sources/css/style.css">
 </head>
 
 <body>
